# nexus-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  PROGRESS.md  README.md  glama.json  llms-full.txt  llms.txt  nexus-mcp-ci  package-lock.json  pyproject.toml  repro_fail.py  requirements.txt  setup.py  setup.sh  smithery.yaml  todo.md
.claude-plugin/: marketplace.json
.claude/rules/: test-standards.md
.github/workflows/: publish.yml
benchmarks/: README.md  __init__.py  _preindex_one.py  conditions.py  report.py  runner.py  scoring.py  setup_repos.sh  transcript.py
benchmarks/mcp-configs/: nexus.json
benchmarks/tasks/: django.yaml  home-assistant.yaml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  FUTURE_CONTRIBUTIONS.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  PROJECT_INFO.md  RESEARCH.md  ROADMAP-2026.md  USAGE_GUIDE.md
docs-pre/: MARKET_RESEARCH_codegrpk.md  MCP_Integration_Plan.md  NEXUS_PLAN.md  agentic-guide-v2.md  agentic-setup-template.md
docs/adr/: ADR-000-template.md  ADR-001-single-mcp-consolidation.md  ADR-002-lancedb-over-chromadb.md  ADR-003-onnx-runtime-over-pytorch.md  ADR-004-bge-small-default-model.md  ADR-005-dual-parser-strategy.md  ADR-006-rustworkx-graph-engine.md  ADR-007-lancedb-schema-design.md  ADR-008-code-chunk-strategy.md  ADR-009-indexing-pipeline-architecture.md  (+9 more)
plugin/: .mcp.json
scratch/: glama_repro.Dockerfile  repro_log.txt
scripts/: init.sh
self_test/: README.md  demo_mcp.py
tests/: conftest.py  test_analyze_tool.py  test_audit.py  test_bench_conditions.py  test_bench_preindex_one.py  test_bench_report.py  test_bench_runner.py  test_bench_scoring.py  test_bench_transcript.py  test_bm25_engine.py  test_chunker.py  test_config.py  test_e2e.py  test_embedding_properties.py  test_exceptions.py  test_explain_tool.py  test_fusion.py  test_graph_engine.py  test_graph_models.py  test_graph_persistence.py  test_graph_tools.py  test_health.py  test_hybrid_search.py  test_impact_tool.py  test_interfaces.py  test_language_registry.py  test_live_grep.py  test_memory_store.py  test_memory_usage.py  test_models.py  test_packaging_metadata.py  test_performance.py  test_permissions.py  test_pipeline.py  test_rate_limiter.py  test_reranker.py  test_response_builder.py  test_schemas.py  test_security.py  test_state.py  (+5 more)
(+47 files in other folders)
